manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # means -> ALB gets public DNS
    alb.ingress.kubernetes.io/target-type: ip # means -> ALB routes traffic to pods instead of node port
spec:
  ingressClassName: alb 
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
